// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - Chains - Foodit-Global - Common - RenderCollection - LCP Optimization should render BN_12_GRID layout with articles 1`] = `
<div>
  <div
    class="flex ai-end jc-between gap-24 mb-24_md py-12 py-0_md roof-sticky"
  >
    <h3
      class="text roof-text-sticky pl-16 pl-0_md"
    >
      Grid Title
    </h3>
    <button
      class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover ml-auto pr-16 pr-0_md"
      data-variant="link"
    />
  </div>
  <div
    class="grid grid-cols-8 grid-cols-12_md grid-cols-16_lg gap-32"
  >
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCC111"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/dieta/una-comida-si-saludable-nid06092023/"
        target="_self"
        title="Una comida si saludable"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/-T5F1KO-3Gu4_hHJHlbjAkEhREM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
              />
              <img
                alt="Hamburguesa de carne vacuna (Pixabay)"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/uyeqgz-uiqDUf-wLyAO6FeiisMQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Una comida si saludable
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Maru Botana
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  5 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC111"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC111"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCC222"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/dieta/una-dieta-poco-saludable-nid06092023/"
        target="_self"
        title="Una dieta ...poco saludable"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/-T5F1KO-3Gu4_hHJHlbjAkEhREM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
              />
              <img
                alt="Hamburguesa de carne vacuna (Pixabay)"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/uyeqgz-uiqDUf-wLyAO6FeiisMQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Una dieta ...poco saludable
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Maru Botana
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  9 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC222"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC222"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCC333"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/dieta/una-comida-mas-o-menos-saludable-nid06092023/"
        target="_self"
        title="Una comida mas o menos saludable"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/-T5F1KO-3Gu4_hHJHlbjAkEhREM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
              />
              <img
                alt="Hamburguesa de carne vacuna (Pixabay)"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/uyeqgz-uiqDUf-wLyAO6FeiisMQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Una comida mas o menos saludable
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14 mb-24"
              >
                Por Maru Botana
              </span>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC333"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC333"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCC444"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/clasica/receta-para-comer-mas-rico-con-milanesas-nid06092023/"
        target="_self"
        title="Receta para comer mas rico con ...MILANESAS "
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/UGjxrx8lNRZ4UUUncPnYY8j_pTA=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
              <img
                alt="Acompañá las patas de pollo con zucchinis"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/UAW2_6kmsNW2vZMJz0Ju7tE8PlY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Receta para comer mas rico con ...MILANESAS 
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Foodit
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  5 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC444"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC444"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-positive max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-note--AAABBBCCC555"
      data-variant="note"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/clasica/ficha-nota-foodit-nid11092023/"
        target="_self"
        title="Ficha nota FOODIT"
      >
        <div
          class="relative w-100 px-16 pt-16"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/JCYWqHBocu_465twQ4jXqcvKTY8=/420x280/smart/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/YXS2J3YI7ZFWJC5I3ECOTV45O4.jpg"
              />
              <img
                alt="Pie de foto"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/sZWokM9HOmBxTxsh1wLkXIaYB64=/238x158/smart/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/YXS2J3YI7ZFWJC5I3ECOTV45O4.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between px-16 pt-24 pb-16"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-semibold prumo-medium text-20 text-ellipsis-3"
              >
                Ficha nota FOODIT
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Foodit
              </span>
              <div
                class="flex ai-center gap-4 none"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  7 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC555"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC555"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-positive max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-note--AAABBBCCC666"
      data-variant="note"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/clasica/receta-para-comer-mas-rico-con-pollito-nid04092023/"
        target="_self"
        title="Receta para comer mas rico con ...POLLITO 2"
      >
        <div
          class="relative w-100 px-16 pt-16"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/UGjxrx8lNRZ4UUUncPnYY8j_pTA=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
              <img
                alt="Acompañá las patas de pollo con zucchinis"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/UAW2_6kmsNW2vZMJz0Ju7tE8PlY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between px-16 pt-24 pb-16"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-semibold prumo-medium text-20 text-ellipsis-3"
              >
                Receta para comer mas rico con ...POLLITO 2
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Foodit
              </span>
              <div
                class="flex ai-center gap-4 none"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  4 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC666"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC666"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCC777"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/dieta/una-comida-no-saludable-nid06092023/"
        target="_self"
        title="Una comida no saludable"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/-T5F1KO-3Gu4_hHJHlbjAkEhREM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
              />
              <img
                alt="Hamburguesa de carne vacuna (Pixabay)"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/uyeqgz-uiqDUf-wLyAO6FeiisMQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Una comida no saludable
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14 mb-24"
              >
                Por Maru Botana
              </span>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC777"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC777"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCC888"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/dulces/receta-rapida-nid06092023/"
        target="_self"
        title="Receta rapida"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/4euC7C0duGKCn3hj5T6WiNA5aL0=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/3IBNBI7ITJFKDC6PQUXVEGNCWQ.jpg"
              />
              <img
                alt="Subtitle"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/ySDDSPdlKx7hOqPQ7stYATozdW4=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/3IBNBI7ITJFKDC6PQUXVEGNCWQ.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Receta rapida
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14 mb-24"
              >
                Por Emilio Ocampo
              </span>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC888"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC888"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCC999"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/clasica/prueba-nota-recetas-nuevo-nid04092023/"
        target="_self"
        title="Prueba nota recetas nuevo"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/39iaG0em6yhSZIkIwxjfFRhZXw0=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/7MLRVAHIWNGBVIO4HLLU3GRVUQ.jpg"
              />
              <img
                alt=""
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/A29ND6fhGV2TlD5CIZW5SNpyEwY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/7MLRVAHIWNGBVIO4HLLU3GRVUQ.jpg"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Prueba nota recetas nuevo
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Carlos Pagni
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  69 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC999"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC999"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card---AAABBBCCC0000"
      data-variant=""
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/dieta/vegetarianas/sopa-de-mani-nid24082023/"
        target="_self"
        title="Sopa de mani"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/ipLc_6K_t4yo-Smy0KpJuVxL420=/420x280/smart/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UETSUXOVHBESLGNH5OTMPYZGYI.webp"
              />
              <img
                alt=""
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/j-IJ5qMXhujp_MG5mjLTIRnayHI=/238x158/smart/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UETSUXOVHBESLGNH5OTMPYZGYI.webp"
              />
            </picture>
          </div>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Sopa de mani
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Foodit
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  11 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC0000"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC0000"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCC000"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/dieta/veganas/como-traer-la-tercera-nid24082023/"
        target="_self"
        title="Como traer la tercera"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/Gb-JZZkR73DjvH-pNLmt4EQESHM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/TR5C3TK6F5BWRCYRR3AUO4RMQ4.jpeg"
              />
              <img
                alt=""
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/VB6dy7gi6LI1unkCJMZg0zgyNBQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/TR5C3TK6F5BWRCYRR3AUO4RMQ4.jpeg"
              />
            </picture>
          </div>
          <span
            class="inline-flex ai-center gap-4 py-2 px-16 bg-accent-vino text-light-1 text-12 roboto-bold uppercase absolute translate-y-50 bottom-0 left-0"
          >
            FÁCIL
          </span>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Como traer la tercera
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Por Lionel Messi, Tomás Rivas y Eze
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  36 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCC000"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCC000"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
    <article
      class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100 col-span-8 col-span-4_md"
      data-container="grid"
      data-test-id="card-recipe--AAABBBCCD111"
      data-variant="recipe"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
        data-variant="primary"
        href="/dieta/veganas/prueba-receta-vegana-nid24082023/"
        target="_self"
        title="Prueba receta vegana"
      >
        <div
          class="relative w-100"
        >
          <div
            class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
          >
            <picture>
              <source
                media="(max-width: 767px)"
                srcset="https://resizer.glanacion.com/resizer/ieCszURadyFnFeJKWMXeYzAgYdI=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/6DOWKDZ4ZFDFNEVFD4WJ3N2AXA.jpg"
              />
              <img
                alt="Provoleta con vegetales"
                class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                decoding="async"
                fetchpriority="low"
                loading="lazy"
                src="https://resizer.glanacion.com/resizer/Pi97y-0q3jUiWl6dDQ_UPITX8MY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/6DOWKDZ4ZFDFNEVFD4WJ3N2AXA.jpg"
              />
            </picture>
          </div>
          <span
            class="inline-flex ai-center gap-4 py-2 px-16 bg-accent-vino text-light-1 text-12 roboto-bold uppercase absolute translate-y-50 bottom-0 left-0"
          >
            RÁPIDA
          </span>
        </div>
        <div
          class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
        >
          <div
            class="flex flex-column gap-12"
          >
            <div
              class="flex flex-column gap-4"
            >
              <h2
                class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-3"
              >
                Prueba receta vegana
              </h2>
            </div>
          </div>
          <div
            class="flex gap-16 text-light-800 ai-center"
          >
            <div
              class="flex flex-column gap-8 flex-grow-1"
            >
              <span
                class="text text-14"
              >
                Foodit
              </span>
              <div
                class="flex ai-center gap-4"
              >
                <i
                  class="icon --icon-12 --inherit"
                >
                  <mock-icon
                    name="timer"
                  />
                </i>
                <span
                  class="text text-12 roboto-light"
                >
                  68 min
                </span>
              </div>
            </div>
            <button
              class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
              data-father-type="bn_12_grid"
              data-id="AAABBBCCD111"
              data-modal="open-modal"
              data-test-id="button-bookmark-AAABBBCCD111"
              data-variant="link"
              title="Guardar receta"
            >
              <i
                class="icon w-24 --dark"
              >
                <mock-icon
                  critical=""
                  name="bookmark"
                />
              </i>
              <span
                class="uppercase none"
              >
                Guardar
              </span>
            </button>
          </div>
        </div>
      </a>
    </article>
  </div>
</div>
`;

exports[`Components - Chains - Foodit-Global - Common - RenderCollection - LCP Optimization should render Carousel layout with title and link 1`] = `
<div>
  <div
    class="carousel-container"
  >
    <div
      class="flex ai-end jc-between gap-24 mb-24_md py-12 py-0_md roof-sticky"
    >
      <a
        class="link foodit-link flex gap-8 ai-center roboto-regular roof-text-sticky ml-16 ml-0_md border border-bottom border-thin border-light-800 text-accent-batata__hover border-accent-lechuga__hover"
        data-variant="primary"
        href="https://lanacion.com"
        target="_self"
        title="Ir a carousel title"
      >
        carousel title
      </a>
      <button
        class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover ml-auto pr-16 pr-0_md"
        data-collectionid=""
        data-variant="link"
        text="Guardado"
        title="Guardado"
      >
        <i
          class="icon w-24 w-20_md --dark"
        >
          <mock-icon
            name="bookmark-filled"
          />
        </i>
        <span
          class="text text-12 sm-none uppercase"
        >
          Guardado
        </span>
      </button>
    </div>
    <div
      class="media-scroller relative flex flex-column gap-16 hide-mobile"
      data-scroller="container"
    >
      <ul
        class="relative --full-width"
        data-scroller="track"
        data-scroller-elements="12"
        data-testid="container-cards-carousel"
      >
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCC111"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/dieta/una-comida-si-saludable-nid06092023/"
              target="_self"
              title="Una comida si saludable"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/-T5F1KO-3Gu4_hHJHlbjAkEhREM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
                    />
                    <img
                      alt="Hamburguesa de carne vacuna (Pixabay)"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/uyeqgz-uiqDUf-wLyAO6FeiisMQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Una comida si saludable
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Por Maru Botana
                    </span>
                    <div
                      class="flex ai-center gap-4"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        5 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC111"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC111"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCC222"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/dieta/una-dieta-poco-saludable-nid06092023/"
              target="_self"
              title="Una dieta ...poco saludable"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/-T5F1KO-3Gu4_hHJHlbjAkEhREM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
                    />
                    <img
                      alt="Hamburguesa de carne vacuna (Pixabay)"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/uyeqgz-uiqDUf-wLyAO6FeiisMQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Una dieta ...poco saludable
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Por Maru Botana
                    </span>
                    <div
                      class="flex ai-center gap-4"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        9 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC222"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC222"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCC333"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/dieta/una-comida-mas-o-menos-saludable-nid06092023/"
              target="_self"
              title="Una comida mas o menos saludable"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/-T5F1KO-3Gu4_hHJHlbjAkEhREM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
                    />
                    <img
                      alt="Hamburguesa de carne vacuna (Pixabay)"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/uyeqgz-uiqDUf-wLyAO6FeiisMQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Una comida mas o menos saludable
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14 mb-24"
                    >
                      Por Maru Botana
                    </span>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC333"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC333"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCC444"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/clasica/receta-para-comer-mas-rico-con-milanesas-nid06092023/"
              target="_self"
              title="Receta para comer mas rico con ...MILANESAS "
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/UGjxrx8lNRZ4UUUncPnYY8j_pTA=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
                    />
                    <img
                      alt="Acompañá las patas de pollo con zucchinis"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/UAW2_6kmsNW2vZMJz0Ju7tE8PlY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Receta para comer mas rico con ...MILANESAS 
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Foodit
                    </span>
                    <div
                      class="flex ai-center gap-4"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        5 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC444"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC444"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-positive max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-note--AAABBBCCC555"
            data-variant="note"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/clasica/ficha-nota-foodit-nid11092023/"
              target="_self"
              title="Ficha nota FOODIT"
            >
              <div
                class="relative w-100 px-16 pt-16"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/JCYWqHBocu_465twQ4jXqcvKTY8=/420x280/smart/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/YXS2J3YI7ZFWJC5I3ECOTV45O4.jpg"
                    />
                    <img
                      alt="Pie de foto"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/sZWokM9HOmBxTxsh1wLkXIaYB64=/238x158/smart/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/YXS2J3YI7ZFWJC5I3ECOTV45O4.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between px-16 pt-24 pb-16"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-semibold prumo-medium text-20 text-ellipsis-2"
                    >
                      Ficha nota FOODIT
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Foodit
                    </span>
                    <div
                      class="flex ai-center gap-4 none"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        7 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC555"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC555"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-positive max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-note--AAABBBCCC666"
            data-variant="note"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/clasica/receta-para-comer-mas-rico-con-pollito-nid04092023/"
              target="_self"
              title="Receta para comer mas rico con ...POLLITO 2"
            >
              <div
                class="relative w-100 px-16 pt-16"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/UGjxrx8lNRZ4UUUncPnYY8j_pTA=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
                    />
                    <img
                      alt="Acompañá las patas de pollo con zucchinis"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/UAW2_6kmsNW2vZMJz0Ju7tE8PlY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/QIMN3EHZZBHCFIOTSI6W6YHBJY.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between px-16 pt-24 pb-16"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-semibold prumo-medium text-20 text-ellipsis-2"
                    >
                      Receta para comer mas rico con ...POLLITO 2
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Foodit
                    </span>
                    <div
                      class="flex ai-center gap-4 none"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        4 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC666"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC666"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCC777"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/dieta/una-comida-no-saludable-nid06092023/"
              target="_self"
              title="Una comida no saludable"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/-T5F1KO-3Gu4_hHJHlbjAkEhREM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
                    />
                    <img
                      alt="Hamburguesa de carne vacuna (Pixabay)"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/uyeqgz-uiqDUf-wLyAO6FeiisMQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/A4K4E42OW5GKHAPCLOBH7A2WBY.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Una comida no saludable
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14 mb-24"
                    >
                      Por Maru Botana
                    </span>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC777"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC777"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCC888"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/dulces/receta-rapida-nid06092023/"
              target="_self"
              title="Receta rapida"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/4euC7C0duGKCn3hj5T6WiNA5aL0=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/3IBNBI7ITJFKDC6PQUXVEGNCWQ.jpg"
                    />
                    <img
                      alt="Subtitle"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/ySDDSPdlKx7hOqPQ7stYATozdW4=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/3IBNBI7ITJFKDC6PQUXVEGNCWQ.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Receta rapida
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14 mb-24"
                    >
                      Por Emilio Ocampo
                    </span>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC888"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC888"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCC999"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/clasica/prueba-nota-recetas-nuevo-nid04092023/"
              target="_self"
              title="Prueba nota recetas nuevo"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/39iaG0em6yhSZIkIwxjfFRhZXw0=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/7MLRVAHIWNGBVIO4HLLU3GRVUQ.jpg"
                    />
                    <img
                      alt=""
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/A29ND6fhGV2TlD5CIZW5SNpyEwY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/7MLRVAHIWNGBVIO4HLLU3GRVUQ.jpg"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Prueba nota recetas nuevo
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Por Carlos Pagni
                    </span>
                    <div
                      class="flex ai-center gap-4"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        69 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC999"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC999"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card---AAABBBCCC0000"
            data-variant=""
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/dieta/vegetarianas/sopa-de-mani-nid24082023/"
              target="_self"
              title="Sopa de mani"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/ipLc_6K_t4yo-Smy0KpJuVxL420=/420x280/smart/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UETSUXOVHBESLGNH5OTMPYZGYI.webp"
                    />
                    <img
                      alt=""
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/j-IJ5qMXhujp_MG5mjLTIRnayHI=/238x158/smart/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UETSUXOVHBESLGNH5OTMPYZGYI.webp"
                    />
                  </picture>
                </div>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Sopa de mani
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Foodit
                    </span>
                    <div
                      class="flex ai-center gap-4"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        11 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC0000"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC0000"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCC000"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/dieta/veganas/como-traer-la-tercera-nid24082023/"
              target="_self"
              title="Como traer la tercera"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/Gb-JZZkR73DjvH-pNLmt4EQESHM=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/TR5C3TK6F5BWRCYRR3AUO4RMQ4.jpeg"
                    />
                    <img
                      alt=""
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/VB6dy7gi6LI1unkCJMZg0zgyNBQ=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/TR5C3TK6F5BWRCYRR3AUO4RMQ4.jpeg"
                    />
                  </picture>
                </div>
                <span
                  class="inline-flex ai-center gap-4 py-2 px-16 bg-accent-vino text-light-1 text-12 roboto-bold uppercase absolute translate-y-50 bottom-0 left-0"
                >
                  FÁCIL
                </span>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Como traer la tercera
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Por Lionel Messi, Tomás Rivas y Eze
                    </span>
                    <div
                      class="flex ai-center gap-4"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        36 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCC000"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCC000"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
        <li
          class=""
          data-scroller="element"
        >
          <article
            class="card relative w-100 mx-auto overflow-hidden h-100 bg-light-1 max-w-1366 border border-all border-thin border-light-100"
            data-container="grid"
            data-test-id="card-recipe--AAABBBCCD111"
            data-variant="recipe"
          >
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular card-container h-100 text-inherit row-gap-0 column-gap-32 flex-column"
              data-variant="primary"
              href="/dieta/veganas/prueba-receta-vegana-nid24082023/"
              target="_self"
              title="Prueba receta vegana"
            >
              <div
                class="relative w-100"
              >
                <div
                  class="foodit-placeholder object-cover card-image ratio-3-2 w-100"
                >
                  <picture>
                    <source
                      media="(max-width: 767px)"
                      srcset="https://resizer.glanacion.com/resizer/ieCszURadyFnFeJKWMXeYzAgYdI=/420x280/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/6DOWKDZ4ZFDFNEVFD4WJ3N2AXA.jpg"
                    />
                    <img
                      alt="Provoleta con vegetales"
                      class="image object-cover card-image ratio-3-2 w-100 flex --cover"
                      decoding="async"
                      fetchpriority="low"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/Pi97y-0q3jUiWl6dDQ_UPITX8MY=/238x158/filters:format(webp):quality(70)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/6DOWKDZ4ZFDFNEVFD4WJ3N2AXA.jpg"
                    />
                  </picture>
                </div>
                <span
                  class="inline-flex ai-center gap-4 py-2 px-16 bg-accent-vino text-light-1 text-12 roboto-bold uppercase absolute translate-y-50 bottom-0 left-0"
                >
                  RÁPIDA
                </span>
              </div>
              <div
                class="card-main w-100 flex flex-column flex-grow-1 gap-16 text-light-800 px-16 pb-16 pt-20 jc-between"
              >
                <div
                  class="flex flex-column gap-12"
                >
                  <div
                    class="flex flex-column gap-4"
                  >
                    <h2
                      class="text card-title prumo transition-regular prumo-medium text-20 text-ellipsis-2"
                    >
                      Prueba receta vegana
                    </h2>
                  </div>
                </div>
                <div
                  class="flex gap-16 text-light-800 ai-center"
                >
                  <div
                    class="flex flex-column gap-8 flex-grow-1"
                  >
                    <span
                      class="text text-14"
                    >
                      Foodit
                    </span>
                    <div
                      class="flex ai-center gap-4"
                    >
                      <i
                        class="icon --icon-12 --inherit"
                      >
                        <mock-icon
                          name="timer"
                        />
                      </i>
                      <span
                        class="text text-12 roboto-light"
                      >
                        68 min
                      </span>
                    </div>
                  </div>
                  <button
                    class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover"
                    data-father-type="carousel"
                    data-id="AAABBBCCD111"
                    data-modal="open-modal"
                    data-test-id="button-bookmark-AAABBBCCD111"
                    data-variant="link"
                    title="Guardar receta"
                  >
                    <i
                      class="icon w-24 --dark"
                    >
                      <mock-icon
                        name="bookmark-filled"
                      />
                    </i>
                    <span
                      class="uppercase none"
                    >
                      Guardar
                    </span>
                  </button>
                </div>
              </div>
            </a>
          </article>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Components - Chains - Foodit-Global - Common - RenderCollection - LCP Optimization should render nothing when articles array is empty 1`] = `
<div>
  <div
    class="carousel-container"
  >
    <div
      class="flex ai-end jc-between gap-24 mb-24_md py-12 py-0_md roof-sticky"
    >
      <h2
        class="text roof-text-sticky pl-16 pl-0_md"
      >
        Empty Articles Test
      </h2>
      <button
        class="button foodit-button gap-8 roboto-bold text-12 rounded-4 text-light-800 text-accent-lechuga__hover ml-auto pr-16 pr-0_md"
        data-collectionid=""
        data-variant="link"
        text="Guardar todo"
        title="Guardar todo"
      >
        <i
          class="icon w-24 w-20_md --dark"
        >
          <mock-icon
            name="bookmark-plus"
          />
        </i>
        <span
          class="text text-12 sm-none uppercase"
        >
          Guardar todo
        </span>
      </button>
    </div>
    <div
      class="media-scroller relative flex flex-column gap-16 hide-mobile"
      data-scroller="container"
    >
      <ul
        class="relative --full-width"
        data-scroller="track"
        data-scroller-elements="0"
        data-testid="container-cards-carousel"
      />
    </div>
  </div>
</div>
`;

exports[`Components - Chains - Foodit-Global - Common - RenderCollection - LCP Optimization should render nothing when hideCaja is true 1`] = `<div />`;
